Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11226

sanity-flr test 200 fails with 'checksum error for mirror 3'

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • 3
    • 9223372036854775807

      sanity-flr test_200 started failing on August 6, 2018. The last lines seen in the test_log is

      /mnt/lustre/f200.sanity-flr: found 6 stale components
      /mnt/lustre/f200.sanity-flr: resyncing mirror: 1, components: 65537 65538 65539 65540 
      components synced: 65537 65538 65539 65540 
      /mnt/lustre/f200.sanity-flr: resyncing mirror: 3, components: 196609 196610 
      components synced: 196609 196610 
      3
       sanity-flr test_200: @@@@@@ FAIL: checksum error for mirror 3
      

      There’s nothing interesting in the node console logs for this test.

      Looking at all the patches that landed around August 6, https://review.whamcloud.com/32808 looks like a possible candidate for a change in the mirror resync behavior.

      Here are links to a few recent failures:
      https://testing.whamcloud.com/test_sets/71ef290a-9a2d-11e8-8ee3-52540065bddc
      https://testing.whamcloud.com/test_sets/5ee037ee-99d0-11e8-87f3-52540065bddc
      https://testing.whamcloud.com/test_sets/4cb6a618-99bf-11e8-a9f7-52540065bddc

            bobijam Zhenyu Xu
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: